# lua_integration

./: .gitmodules  CMakeLists.txt  README.md
src/: UseCases.h  main.cpp
src/scripts/: call_cpp_function_from_lua.lua  call_cpp_member_function_from_lua.lua  call_cpp_template_function_from_lua.lua  get_a_function_from_lua_in_cpp.lua  player_script.lua  prelude_script.lua  test_1.lua  variables.lua
src/step1-variables/: 1_load_variables_from_lua.cpp  2_write_variables_to_lua.cpp  load_variables_from_lua.cpp
src/step2-functions/: 1_call_cpp_functions_in_lua.cpp  2_call_cpp_member_functions_in_lua.cpp  3_call_cpp_template_functions_in_lua.cpp  4_get_a_function_from_lua_in_cpp.cpp  5_multy_returns_from_lua_function.cpp  6_define_multy_return_functions_to_lua_function_in_cpp.cpp  7_return_any_type_to_and_from_lua.cpp
src/step3-UseCppClassesInLua/: player.h  use_cpp_classes_in_lua.cpp
src/step4-ReferenceAndPointerOwnership/: 1_object_lifetime.cpp  2_raw_pointer_lifetime.cpp
src/step5-safeScriptUsage/: safe_script_usage.cpp
